Moved Sunflower Trail page to Membership Fees page as a sub-section.

--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -9,11 +9,13 @@
   display: flex;
   gap: 10px;
   max-width: max-content;
-  color: #262626;
+  color: #006452;
   border-radius: 32px;
-  border: 1px solid rgb(181, 181, 181);
+  border: 1px solid #006452b4;
   text-decoration: none;
   transition: all 0.15s ease;
+  background-color: white;
+
   .membership-application-icon {
     width: 14px;
     height: auto;
@@ -22,11 +24,11 @@
     }
   }
   &:hover {
-    background-color: white;
-    border-color: #006452b4;
+    transform: translateY(-1px);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   }
 }
-
 
 .addendum {
   // padding: 28px 35px 30px 26px;
@@ -34,9 +36,10 @@
   // background-color: #ededed;
   padding-left: 3px;
   .two-paragraphs {
-    border-left: 1.5px solid rgb(224 224 224);
-    padding-left: 24px;
-
+    border-left: 1.5px solid rgb(224, 224, 224);
+    padding-left: 39px;
+    padding-top: 17px;
+    padding-bottom: 22px;
     p {
       margin-bottom: 15px;
       line-height: 143%;
@@ -47,6 +50,7 @@
     }
   }
 }
+
 .explainer-icon {
   width: 14px;
   height: auto;
@@ -1580,138 +1584,77 @@ section.perks {
   @media (max-width: 992px) {
     padding-bottom: 2rem;
   }
+  &.membership {
+    padding-bottom: 15rem;
+  }
+  .table-wrapper-basic-fees {
+    &.membership-table-wrapper {
+      padding-bottom: 10rem;
+      table {
+        margin-bottom: 45px;
+      }
+    }
+  }
+}
+
+//~ Sunflower Trail
+.sunflower-trail-page-body {
+  padding-top: 17rem;
+  padding-bottom: 17rem;
+  // background-color: #fafafa;
+  .container {
+    .row {
+      justify-content: center;
+      .sunflower-trail-wrapper {
+        max-width: 900px;
+        h3 {
+          font-size: 50px;
+          .sunflower-icon {
+            width: 53px;
+            height: auto;
+            margin-right: 20px;
+            margin-top: -9px;
+            margin-left: -3px;
+            path {
+              fill: rgb(225, 180, 18);
+            }
+          }
+        }
+        .sft-intro {
+          font-size: 19px;
+          line-height: 140%;
+          padding-bottom: 5rem;
+          font-family: "IKOB Italic";
+        }
+        h6 {
+          font-size: 25px;
+          letter-spacing: 0.5px;
+        }
+        hr {
+          height: 1.5px;
+          background-color: rgb(189 189 189);
+        }
+        .sunflower-list {
+          padding-left: 2px;
+
+          li {
+            // padding-left: 20px;
+            font-size: 19px;
+            list-style-type: none;
+            color: rgba(0, 0, 0, 0.6);
+            .b {
+              color: #262626;
+              letter-spacing: 0.15px;
+              -webkit-text-stroke: 0.4px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 //~ Pool
-.pool-page-body {
-  padding-top: 14rem;
-  padding-bottom: 16rem;
-  background-color: #f4f4f4;
-  background-size: cover;
-  background-position: center center;
-  position: relative;
-  .container {
-    position: relative;
-    z-index: 8;
-  }
-  //   .masking-overlay {
-  //     position: absolute;
-  //     height: 100%;
-  //     width: 100%;
-  //     top: 0;
-  //     left: 0;
-  //     background: radial-gradient(at center, #f4f4f400 30%, #F4F4F4 80%);
-  //     background: radial-gradient(at center, #f50707dc, #F4F4F4);
-  //   }
-  h2 {
-    text-align: center;
-    color: #d3d3d3;
-    padding-bottom: 5rem;
-    font-size: 70px;
-  }
-  .pool-note {
-    font-size: 19px;
-    padding-bottom: 3rem;
-    padding-left: 3px;
-    padding-right: 3px;
-    line-height: 150%;
-  }
-  .fees-table {
-    background: white;
-    border-radius: 10px;
-    padding: 25px 30px;
-    font-size: 17px;
-    height: 100%;
-    .fees-title {
-      color: rgb(140, 140, 140);
-      padding-bottom: 15px;
-      font-size: 19px;
-    }
-    .fees-side {
-      flex-grow: 1;
-      .fee-row {
-        display: flex;
-        flex-direction: row;
-        padding-bottom: 10px;
-        width: 100%;
-        ._1st-col {
-          img {
-            position: relative;
-            width: 13px;
-            height: auto;
-            top: -1.5px;
-          }
-        }
-        .spanner {
-          position: relative;
-          top: -7px;
-          flex: 1;
-          border-bottom: 1.5px dotted rgba(0, 0, 0, 0.184);
-          margin-left: 10px;
-          margin-right: 10px;
-        }
-      }
-    }
-    &.initiation-fees {
-      padding: 0px;
-      .fees-title {
-        padding-bottom: 15px;
-        font-size: 21px;
-      }
-      .fees-side {
-        .fee-row {
-          padding-bottom: 5px;
-        }
-      }
-      hr {
-        height: 1.5px;
-        background-color: rgba(0, 0, 0, 0.123);
-        margin-top: 15px;
-        margin-bottom: 20px;
-      }
-
-      .first-bit {
-        padding: 33px 30px 27px 30px;
-      }
-      .second-bit {
-        padding: 23px 30px 25px 30px;
-        border-top: 1.5px solid #f6f6f6;
-      }
-      .third-bit {
-        padding: 25px 30px 35px 30px;
-        border-top: 1.5px solid #f6f6f6;
-      }
-    }
-    &.pool-membership-fees {
-      padding: 35px 40px 30px 40px;
-      background: white;
-      // border: 1px solid rgb(238, 238, 238);
-      .fees-title {
-        padding-bottom: 0px;
-        padding-top: 5px;
-      }
-    }
-  }
-  .notices {
-    box-shadow: none;
-    transform: none;
-    .row {
-      [class*="col"] {
-        &:not(:first-of-type) {
-          border-left: 1.5px solid #f6f6f6;
-        }
-        .notice-icon.golf-bag {
-          img {
-            height: 30px;
-          }
-        }
-      }
-    }
-  }
-  .table-wrapper-pool {
-    margin-bottom: 1.5rem;
-  }
-}
 .pool-rules {
   padding-top: 16rem;
   padding-bottom: 5rem;
