--- a/css/style.css
+++ b/css/style.css
@@ -12157,14 +12157,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12179,14 +12179,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12201,14 +12201,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(3) {
   z-index: 8;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(3):before {
   content: "3";
 }
 .slyde:nth-child(3).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12223,14 +12223,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(2deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(2deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12267,14 +12267,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(-2deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-2deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12289,14 +12289,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12333,14 +12333,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12355,14 +12355,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(-4deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(-4deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -13943,13 +13943,13 @@ li.has-dropdown:hover .submenu li a {
 .banner-subpage.rates-banner .title {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
 }
-.banner-subpage.pool-banner {
-  background-image: url(../images/water-surface.jpg);
+.banner-subpage.sunflower-trail-banner {
+  background-image: url(../images/sunflowers.jpg);
 }
-.banner-subpage.pool-banner .overlay {
+.banner-subpage.sunflower-trail-banner .overlay {
   background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.6) 0%, hsla(0, 0%, 0%, 0.594) 2.7%, hsla(0, 0%, 0%, 0.576) 5.2%, hsla(0, 0%, 0%, 0.548) 7.7%, hsla(0, 0%, 0%, 0.512) 10.4%, hsla(0, 0%, 0%, 0.47) 13.5%, hsla(0, 0%, 0%, 0.424) 17.1%, hsla(0, 0%, 0%, 0.375) 21.3%, hsla(0, 0%, 0%, 0.325) 26.4%, hsla(0, 0%, 0%, 0.276) 32.5%, hsla(0, 0%, 0%, 0.23) 39.9%, hsla(0, 0%, 0%, 0.188) 48.5%, hsla(0, 0%, 0%, 0.152) 58.7%, hsla(0, 0%, 0%, 0.124) 70.6%, hsla(0, 0%, 0%, 0.106) 84.3%, hsla(0, 0%, 0%, 0.1) 100%);
 }
-.banner-subpage.pool-banner .title {
+.banner-subpage.sunflower-trail-banner .title {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
 }
 @media only screen and (max-width: 767px) {
@@ -20937,11 +20937,12 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   display: flex;
   gap: 10px;
   max-width: max-content;
-  color: #262626;
+  color: #006452;
   border-radius: 32px;
-  border: 1px solid rgb(181, 181, 181);
+  border: 1px solid rgba(0, 100, 82, 0.7058823529);
   text-decoration: none;
   transition: all 0.15s ease;
+  background-color: white;
 }
 .pillock .membership-application-icon {
   width: 14px;
@@ -20951,8 +20952,8 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   fill: #d09d3a;
 }
 .pillock:hover {
-  background-color: white;
-  border-color: rgba(0, 100, 82, 0.7058823529);
+  transform: translateY(-1px);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .addendum {
@@ -20960,7 +20961,9 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 .addendum .two-paragraphs {
   border-left: 1.5px solid rgb(224, 224, 224);
-  padding-left: 24px;
+  padding-left: 39px;
+  padding-top: 17px;
+  padding-bottom: 22px;
 }
 .addendum .two-paragraphs p {
   margin-bottom: 15px;
@@ -22243,114 +22246,65 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
     padding-bottom: 2rem;
   }
 }
+.rates-page-body.membership {
+  padding-bottom: 15rem;
+}
+.rates-page-body .table-wrapper-basic-fees.membership-table-wrapper {
+  padding-bottom: 10rem;
+}
+.rates-page-body .table-wrapper-basic-fees.membership-table-wrapper table {
+  margin-bottom: 45px;
+}
 
-.pool-page-body {
-  padding-top: 14rem;
-  padding-bottom: 16rem;
-  background-color: #f4f4f4;
-  background-size: cover;
-  background-position: center center;
-  position: relative;
+.sunflower-trail-page-body {
+  padding-top: 17rem;
+  padding-bottom: 17rem;
 }
-.pool-page-body .container {
-  position: relative;
-  z-index: 8;
+.sunflower-trail-page-body .container .row {
+  justify-content: center;
 }
-.pool-page-body h2 {
-  text-align: center;
-  color: #d3d3d3;
-  padding-bottom: 5rem;
-  font-size: 70px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper {
+  max-width: 900px;
 }
-.pool-page-body .pool-note {
-  font-size: 19px;
-  padding-bottom: 3rem;
-  padding-left: 3px;
-  padding-right: 3px;
-  line-height: 150%;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper h3 {
+  font-size: 50px;
 }
-.pool-page-body .fees-table {
-  background: white;
-  border-radius: 10px;
-  padding: 25px 30px;
-  font-size: 17px;
-  height: 100%;
-}
-.pool-page-body .fees-table .fees-title {
-  color: rgb(140, 140, 140);
-  padding-bottom: 15px;
-  font-size: 19px;
-}
-.pool-page-body .fees-table .fees-side {
-  flex-grow: 1;
-}
-.pool-page-body .fees-table .fees-side .fee-row {
-  display: flex;
-  flex-direction: row;
-  padding-bottom: 10px;
-  width: 100%;
-}
-.pool-page-body .fees-table .fees-side .fee-row ._1st-col img {
-  position: relative;
-  width: 13px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper h3 .sunflower-icon {
+  width: 53px;
   height: auto;
-  top: -1.5px;
+  margin-right: 20px;
+  margin-top: -9px;
+  margin-left: -3px;
 }
-.pool-page-body .fees-table .fees-side .fee-row .spanner {
-  position: relative;
-  top: -7px;
-  flex: 1;
-  border-bottom: 1.5px dotted rgba(0, 0, 0, 0.184);
-  margin-left: 10px;
-  margin-right: 10px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper h3 .sunflower-icon path {
+  fill: rgb(225, 180, 18);
 }
-.pool-page-body .fees-table.initiation-fees {
-  padding: 0px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sft-intro {
+  font-size: 19px;
+  line-height: 140%;
+  padding-bottom: 5rem;
+  font-family: "IKOB Italic";
 }
-.pool-page-body .fees-table.initiation-fees .fees-title {
-  padding-bottom: 15px;
-  font-size: 21px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper h6 {
+  font-size: 25px;
+  letter-spacing: 0.5px;
 }
-.pool-page-body .fees-table.initiation-fees .fees-side .fee-row {
-  padding-bottom: 5px;
-}
-.pool-page-body .fees-table.initiation-fees hr {
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper hr {
   height: 1.5px;
-  background-color: rgba(0, 0, 0, 0.123);
-  margin-top: 15px;
-  margin-bottom: 20px;
+  background-color: rgb(189, 189, 189);
 }
-.pool-page-body .fees-table.initiation-fees .first-bit {
-  padding: 33px 30px 27px 30px;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sunflower-list {
+  padding-left: 2px;
 }
-.pool-page-body .fees-table.initiation-fees .second-bit {
-  padding: 23px 30px 25px 30px;
-  border-top: 1.5px solid #f6f6f6;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sunflower-list li {
+  font-size: 19px;
+  list-style-type: none;
+  color: rgba(0, 0, 0, 0.6);
 }
-.pool-page-body .fees-table.initiation-fees .third-bit {
-  padding: 25px 30px 35px 30px;
-  border-top: 1.5px solid #f6f6f6;
-}
-.pool-page-body .fees-table.pool-membership-fees {
-  padding: 35px 40px 30px 40px;
-  background: white;
-}
-.pool-page-body .fees-table.pool-membership-fees .fees-title {
-  padding-bottom: 0px;
-  padding-top: 5px;
-}
-.pool-page-body .notices {
-  box-shadow: none;
-  transform: none;
-}
-.pool-page-body .notices .row [class*=col]:not(:first-of-type) {
-  border-left: 1.5px solid #f6f6f6;
-}
-.pool-page-body .notices .row [class*=col] .notice-icon.golf-bag img {
-  height: 30px;
-}
-.pool-page-body .table-wrapper-pool {
-  margin-bottom: 1.5rem;
+.sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sunflower-list li .b {
+  color: #262626;
+  letter-spacing: 0.15px;
+  -webkit-text-stroke: 0.4px;
 }
 
 .pool-rules {
