--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -669,8 +669,8 @@ $subpage-height: 550px;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
     }
   }
-  &.sunflower-trail-banner {
-    background-image: url(../images/sunflowers.jpg);
+  &.pro-shop-banner {
+    background-image: url(../images/low-angle-ball.jpg);
     .overlay {
       background-image: $darker-background-gradient;
     }
