--- a/css/style.css
+++ b/css/style.css
@@ -12179,14 +12179,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(1deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(1deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12201,14 +12201,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(3) {
   z-index: 8;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-4deg) translate(-50%, -50%);
 }
 .slyde:nth-child(3):before {
   content: "3";
 }
 .slyde:nth-child(3).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(-4deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12223,14 +12223,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12245,14 +12245,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12289,14 +12289,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-4deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-4deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12311,14 +12311,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(8) {
   z-index: 3;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(8):before {
   content: "8";
 }
 .slyde:nth-child(8).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12333,14 +12333,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12355,14 +12355,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -13943,13 +13943,13 @@ li.has-dropdown:hover .submenu li a {
 .banner-subpage.rates-banner .title {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
 }
-.banner-subpage.sunflower-trail-banner {
-  background-image: url(../images/sunflowers.jpg);
+.banner-subpage.pro-shop-banner {
+  background-image: url(../images/low-angle-ball.jpg);
 }
-.banner-subpage.sunflower-trail-banner .overlay {
+.banner-subpage.pro-shop-banner .overlay {
   background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.6) 0%, hsla(0, 0%, 0%, 0.594) 2.7%, hsla(0, 0%, 0%, 0.576) 5.2%, hsla(0, 0%, 0%, 0.548) 7.7%, hsla(0, 0%, 0%, 0.512) 10.4%, hsla(0, 0%, 0%, 0.47) 13.5%, hsla(0, 0%, 0%, 0.424) 17.1%, hsla(0, 0%, 0%, 0.375) 21.3%, hsla(0, 0%, 0%, 0.325) 26.4%, hsla(0, 0%, 0%, 0.276) 32.5%, hsla(0, 0%, 0%, 0.23) 39.9%, hsla(0, 0%, 0%, 0.188) 48.5%, hsla(0, 0%, 0%, 0.152) 58.7%, hsla(0, 0%, 0%, 0.124) 70.6%, hsla(0, 0%, 0%, 0.106) 84.3%, hsla(0, 0%, 0%, 0.1) 100%);
 }
-.banner-subpage.sunflower-trail-banner .title {
+.banner-subpage.pro-shop-banner .title {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
 }
 @media only screen and (max-width: 767px) {
@@ -20953,7 +20953,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 .pillock:hover {
   transform: translateY(-1px);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.15) 0px 2px 5px -1px, rgba(0, 0, 0, 0.2) 0px 1px 3px -1px;
 }
 
 .addendum {
@@ -22294,7 +22294,7 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   background-color: rgb(189, 189, 189);
 }
 .sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sunflower-list {
-  padding-left: 2px;
+  padding-left: 1px;
 }
 .sunflower-trail-page-body .container .row .sunflower-trail-wrapper .sunflower-list li {
   font-size: 19px;
@@ -22307,62 +22307,40 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   -webkit-text-stroke: 0.4px;
 }
 
-.pool-rules {
-  padding-top: 16rem;
-  padding-bottom: 5rem;
+section.pro-shop-body .band-of-brands {
+  background: aliceblue;
+  padding: 5rem 0;
 }
-.pool-rules .container .row .rules-introduction {
-  width: 100%;
-  max-width: 900px;
-  margin: 0 auto;
-  padding-bottom: 5rem;
+section.pro-shop-body .band-of-brands .container .row .brand {
+  max-width: 150px;
+  height: auto;
 }
-.pool-rules .container .row .rules-introduction h2 {
-  text-align: center;
+section.pro-shop-body > .container {
+  padding-top: 10rem;
+  padding-bottom: 12rem;
+}
+section.pro-shop-body > .container .row [class*=col] .shop-note {
+  font-size: 27px;
+  line-height: 140%;
+}
+section.pro-shop-body .note-box {
+  font-size: 17px;
+}
+section.pro-shop-body .note-box .note-brow {
   padding-bottom: 2rem;
 }
-.pool-rules .container .row .rules-introduction h6 {
-  font-size: 20px;
+section.pro-shop-body .note-box .note-brow .note-icon {
+  width: 25px;
+  height: auto;
 }
-.pool-rules .container .row .rules-introduction h6:not(:first-of-type) {
-  margin-top: 3rem;
+section.pro-shop-body .note-box .note-brow .note-icon.trade {
+  width: 19px;
 }
-.pool-rules .container .row .rules-introduction p {
-  margin-bottom: 20px;
+section.pro-shop-body .note-box .note-brow .note-icon.putting-green {
+  width: 28px;
 }
-.pool-rules .container .row [class*=col] .accordion-container-one {
-  width: 100%;
-  max-width: 900px;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item {
-  border-radius: 10px;
-  overflow: hidden;
-  border: none;
-  border-top: none !important;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item h3 {
-  font-family: var(--font-primary);
-  font-size: 19px;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item h3 .accordion-button[aria-expanded=true]:after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item .accordion-collapse .accordion-body {
-  padding-top: 0px;
-  padding-bottom: 3rem;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item .accordion-collapse .accordion-body > ol {
-  margin-top: 0px;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item .accordion-collapse .accordion-body > ol.exception {
-  margin-top: 16px;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item .accordion-collapse .accordion-body > ol > li:first-of-type {
-  margin-top: 0px;
-}
-.pool-rules .container .row [class*=col] .accordion-container-one .accordion .accordion-item .accordion-collapse .accordion-body .sublist {
-  list-style-type: lower-alpha;
-  margin-bottom: 16px;
+section.pro-shop-body .note-box .note-brow .note-icon.wedge {
+  width: 26px;
 }
 
 footer {
